# app-app

./: .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
src/web_app/: app.py  config.py  permission_rules.json  requirements.txt
src/web_app/agents/: __init__.py  base.py  claude_code_provider.py
src/web_app/controllers/: __init__.py  agent_controller.py  approval_controller.py  chat_controller.py  meta_controller.py  permissions_controller.py
src/web_app/mcp/: approval_gate.py
src/web_app/services/: agent_session_service.py  chat_repository.py  file_monitor_service.py  image_service.py  permission_rules_service.py
src/web_app/static/: app.js  chat.js  styles.css
src/web_app/templates/: index.html
src/web_app/tests/: test_services.py
