[project]
name = "appapp"
version = "0.1.0"
description = "The app that builds apps — a self-modifying web application powered by Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["src/web_app/tests"]
